--- a/KeyBoardChat.Web/KeyBoardChat.Web.csproj
+++ b/KeyBoardChat.Web/KeyBoardChat.Web.csproj
@@ -9,4 +9,16 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KeyBoardChat.DataAccess\KeyBoardChat.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
