--- a/KeyBoardChat.Web/appsettings.json
+++ b/KeyBoardChat.Web/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=keyboard-chart;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
 }
