Added UserRepository. Added UserController. Configured MVC routing.

--- a/KeyBoardChat.Web/KeyBoardChat.Web.csproj
+++ b/KeyBoardChat.Web/KeyBoardChat.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\UserController.cs~RF37edb938.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
