--- a/KeyBoardChat.FrontEnd/package.json
+++ b/KeyBoardChat.FrontEnd/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "keyboard_chat",
-  "version": "1.0.0",
-  "description": "Keyboardchat client part",
-  "main": "index.js",
-  "scripts": {
-    "build-dev": "env NODE_ENV=development webpack --config ./webpack.config.js",
-    "start-dev": "env NODE_ENV=development webpack serve --config ./webpack.config.js",
-    "build-pro": "env NODE_ENV=production webpack --config ./webpack.config.js",
-    "start-pro": "env NODE_ENV=production webpack serve --config ./webpack.config.js"
-  },
-  "author": "1amL0st",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/preset-react": "^7.10.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.0",
-    "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.0.0",
-    "sass": "^1.27.0",
-    "sass-loader": "^10.0.3",
-    "webpack": "^5.1.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "class-names": "^1.0.0",
-    "classnames": "^2.2.6",
-    "date-fns": "^2.16.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-hot-loader": "^4.13.0",
-    "react-router-dom": "^5.2.0",
-    "sjcl": "^1.0.8",
-    "socket-io": "^1.0.0",
-    "socket.io-client": "^2.3.1"
-  }
+    "name": "keyboard_chat",
+    "version": "1.0.0",
+    "description": "Keyboardchat client part",
+    "main": "index.js",
+    "scripts": {
+        "build-dev": "webpack --config ./webpack.config.js",
+        "start-dev": "webpack serve --config ./webpack.config.js",
+        "build-pro": "webpack --config ./webpack.config.js",
+        "start-pro": "webpack serve --config ./webpack.config.js"
+    },
+    "author": "1amL0st",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/preset-react": "^7.10.4",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.1.0",
+        "css-loader": "^5.0.0",
+        "eslint": "^7.12.1",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-webpack-plugin": "^2.1.0",
+        "html-webpack-plugin": "^4.5.0",
+        "mini-css-extract-plugin": "^1.0.0",
+        "sass": "^1.27.0",
+        "sass-loader": "^10.0.3",
+        "webpack": "^5.1.0",
+        "webpack-cli": "^4.0.0",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.32",
+        "@fortawesome/free-solid-svg-icons": "^5.15.1",
+        "@fortawesome/react-fontawesome": "^0.1.11",
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
+        "class-names": "^1.0.0",
+        "classnames": "^2.2.6",
+        "date-fns": "^2.16.1",
+        "prop-types": "^15.7.2",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "react-hot-loader": "^4.13.0",
+        "react-router-dom": "^5.2.0",
+        "sjcl": "^1.0.8",
+        "socket-io": "^1.0.0",
+        "socket.io-client": "^2.3.1"
+    }
 }
