--- a/KeyBoardChat.FrontEnd/package.json
+++ b/KeyBoardChat.FrontEnd/package.json
@@ -1,36 +1,18 @@
 {
     "name": "keyboard_chat",
     "version": "1.0.0",
-    "description": "Keyboardchat client part",
+    "description": "Keyboard chat client part",
     "main": "index.js",
     "scripts": {
-        "build-dev": "webpack --config ./webpack.config.js",
-        "start-dev": "webpack serve --config ./webpack.config.js",
-        "build-pro": "webpack --config ./webpack.config.js",
-        "start-pro": "webpack serve --config ./webpack.config.js"
+        "build-dev": "better-npm-run webpack-dev"
+    },
+    "betterScripts": {
+        "webpack-dev": {
+            "command": "parallel-webpack --max-retries=1 --watch --colors --display-error-details"
+        }
     },
     "author": "1amL0st",
     "license": "ISC",
-    "devDependencies": {
-        "@babel/preset-react": "^7.10.4",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.1.0",
-        "css-loader": "^5.0.0",
-        "eslint": "^7.12.1",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-react": "^7.21.5",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-webpack-plugin": "^2.1.0",
-        "html-webpack-plugin": "^4.5.0",
-        "mini-css-extract-plugin": "^1.0.0",
-        "sass": "^1.27.0",
-        "sass-loader": "^10.0.3",
-        "webpack": "^5.1.0",
-        "webpack-cli": "^4.0.0",
-        "webpack-dev-server": "^3.11.0"
-    },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -48,5 +30,37 @@
         "sjcl": "^1.0.8",
         "socket-io": "^1.0.0",
         "socket.io-client": "^2.3.1"
+    },
+    "devDependencies": {
+        "@babel/preset-react": "^7.10.4",
+        "@types/react": "^16.9.56",
+        "@types/react-dom": "^16.9.9",
+        "@types/react-router-dom": "^5.1.6",
+        "@typescript-eslint/eslint-plugin": "^3.2.0",
+        "@typescript-eslint/parser": "^3.2.0",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.1.0",
+        "better-npm-run": "^0.1.1",
+        "css-loader": "^5.0.0",
+        "eslint": "^7.12.1",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-putout": "^4.0.2",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-webpack-plugin": "^2.1.0",
+        "html-webpack-plugin": "^4.5.0",
+        "mini-css-extract-plugin": "^1.0.0",
+        "parallel-webpack": "^2.6.0",
+        "postcss-loader": "^4.0.2",
+        "sass": "^1.27.0",
+        "sass-loader": "^10.0.3",
+        "ts-loader": "^7.0.5",
+        "typescript": "3.7.5",
+        "webpack": "^5.1.0",
+        "webpack-cli": "^4.0.0",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-livereload-plugin": "^2.3.0"
     }
 }
