--- a/KeyBoardChat.FrontEnd/package.json
+++ b/KeyBoardChat.FrontEnd/package.json
@@ -56,6 +56,12 @@
         "postcss-loader": "^4.0.2",
         "sass": "^1.27.0",
         "sass-loader": "^10.0.3",
+        "stylelint": "^13.6.0",
+        "stylelint-config-rational-order": "0.1.2",
+        "stylelint-config-standard": "^20.0.0",
+        "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
+        "stylelint-order": "^4.1.0",
+        "stylelint-scss": "^3.17.2",
         "ts-loader": "^7.0.5",
         "typescript": "3.7.5",
         "webpack": "^5.1.0",
